# xtb

./: CMakeLists.txt  CONTRIBUTING.md  benchmark_9ny3.py  meson_options.txt
benchmarks/: 2025-11-19_commit_benchmarks.md  2025-11-19_walltime.md  sdqh0_taxol.md
benchmarks/systems/: benzene.xyz
cmake/: CMakeLists.txt
meson/: meson.build
src/: CMakeLists.txt  bfgs.f90  blas_runtime.F90  hessian.F90  lidep.f90  load_balancing.f90  meson.build  mkl_memory.F90  oniom.f90  optimizer.f90  parallel_threads.f90  relaxation_engine.f90  scc_core.f90  scf_module.F90  set_module.f90  setparam.f90  single.f90  threading_policy.F90  xhelp.f90
src/api/: calculator.f90  environment.f90  interface.f90  molecule.f90  results.f90  version.f90
src/coulomb/: gaussian.f90  klopmanohno.F90
src/gfnff/: frag_hess.f90  gfnff_eg.f90  neighbor.f90  neighbourlist.f90
src/lbfgs_anc/: lbfgs.f90
src/mctc/: CMakeLists.txt  error.f90  meminfo.F90  meminfo.f90  meson.build
src/mctc/lapack/: CMakeLists.txt  eigensolve.F90  feast.F90  meson.build  stdeigval.f90  wrap.F90
src/mpi/: CMakeLists.txt  meson.build  numhess_mpi.F90
src/prog/: main.F90  thermo.f90
src/type/: CMakeLists.txt  calculator.F90  calculator.f90  coulomb.f90  environment.f90  latticepoint.f90  meson.build  restart.F90  wavefunction.f90  wignerseitzcell.f90
src/xtb/: calculator.f90  coulomb.f90  dispersion.f90  hamiltonian.F90  multipole.f90  thirdorder.f90
test/unit/: CMakeLists.txt  main.f90  meson.build  run_mpi_hessian_mpirun.py  test_coulomb.f90  test_hessian.f90  test_mpi_hessian.F90  test_oniom.f90  test_palnhess_threads.f90  test_transform.f90
